--- a/P4/package.json
+++ b/P4/package.json
@@ -2,7 +2,7 @@
   "name": "mi-electron-app",
   "description": "Estas es mi primera aplicación de escritorio en Electron",
   "version": "0.1.0",
-  "main": "server.js",
+  "main": "main.js",
   "author": {
     "name": "Laura Moreno"
   },
